# Bob-the-lawyer

./: MCBRIGHT PIABEZIH  Train.py  database.db  finetune-tiny-llma.ipynb  index.html  main.py  model_download.py  model_handler.py  requirements.txt  sidebar.py  test_torch.py  tinyLLMA_installer.py  trainLLMA.py
.github/workflows/: all_build.yml  all_deploy.yml  build_linux.yml
Create_dataset/: text_extractor.py  text_extractor_fromOCR.py
Create_dataset/ConventionsTXT/: CAT_C_BRA_CO_2-FR.txt  CRC_OP_AC_1-EN.txt  ccpr fr.txt  cedaw.txt  cescr.txt  crc.txt  icerd.txt  international_exp_regs_eng.txt  op-crc-ac_fr.txt
DATAUSED/LawsTXT/: CameroonLaw.txt
DevDoings/: all_build.yml  fixed_lenght.txt  fly.toml  gpt2_installer.py  model_download.py  pyproject.toml  test_torch.py  tinyLLMA_installer.py
LawsTXT/ConventionsTXT/: CRC_C_NIU_CO_1-FR.txt  UN_International Convention on the Elimination of Racial Discrimination_1966_FR.txt  cat.txt  ccpr.txt
LawsTXT/Local/FR/: CM_Code_Penal_Cameroun.txt  LA CONSTITUTION.txt
Project/: settings.py
Web/: Dockerfile  contact_model.py  main.py  requirements.txt
api/: README.md  contact_model.py
src/: database.db  main.py  model_handler.py  requirements.txt  sidebar.py
website/: index.html
