[project]
name = "bob-the-lawyer"
version = "1.0.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate==1.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "exceptiongroup==1.3.0",
    "filelock==3.18.0",
    "flet==0.27.6",
    "fsspec==2025.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.2",
    "idna==3.10",
    "Jinja2==3.1.6",
    "lxml==5.4.0",
    "MarkupSafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "oauthlib==3.2.2",
    "packaging==25.0",
    "pandas==2.2.3",
    "peft==0.15.2",
    "pillow==11.2.1",
    "psutil==7.0.0",
    "PyPDF2==3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "repath==0.9.0",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "tokenizers==0.21.1",
    "torch",
    "tqdm==4.67.1",
    "transformers==4.52.3",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "XlsxWriter==3.2.3"
]

[tool.flet]
name = "Bob the Lawyer"
description = "Legal AI Assistant"
python_version = "3.10"

[tool.flet.build.windows]
python_version = "3.10"

[build-system]
requires = ["flet"]